Implement first version of pws connection certificate endpoint